# MDS-ML

./: .gitignore  README.md  main.py  pyproject.toml
Lab1/: L1_JAMAL_MARTINI.ipynb
Lab3/: L3_JAMAL_MARTINI.ipynb
Lab4/: L4_JAMAL_MARTINI.ipynb
Lab5/: L5_JAMAL_MARTINI.ipynb
Lab6/: L6_JAMAL_MARTINI.ipynb
